--- a/12_lecture/03_RandomPasswordGenerator/index.html
+++ b/12_lecture/03_RandomPasswordGenerator/index.html
@@ -26,7 +26,9 @@
         </button>
       </div>
 
-      <p class="message">Password is <span class="strength"></span></p>
+      <p class="message">Password is 
+        <span class="strength"></span>
+      </p>
 
       <div class="generater-copy-container">
         <div class="generate">
